--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                    <a class="nav-link" href="#mh-skills">Skills</a>
                                 </li>                                
                                 <li class="nav-item">
-                                   <a class="nav-link" href="#mh-experience">More</a>
+                                   <a class="nav-link" href="index2.html">More</a>
                                 </li>                                
                                
                                 <li class="nav-item">
