--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <div class="col-sm-6">
                             <div class="hero-img wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                 <div class="img-border">
-                                    <img src="assets/images/me3.jpeg" alt=""  class="img-fluid">
+                                    <img src="assets/images/me2.jpg" alt=""  class="img-fluid">
                                 </div>
                             </div>
                         </div>
