--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             and customization. Also I am good at</p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
-                                    <li><span>php</span></li>
+                                    <li><span>Java</span></li>
                                     <li><span>html</span></li>
                                     <li><span>css</span></li>
                                     <li><span>C</span></li>
@@ -343,14 +343,14 @@
                                 <div class="mh-education-deatils">
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                        <h4>Bsc.IT From <a href="#">Oxford University</a></h4>
+                                        <h4>Bsc.IT From <a href="#">Aisect University</a></h4>
                                         <div class="mh-eduyear">2020-2023</div>
                                         <p>It is a long established fact that a reader will be distracted by the readable content of a 
                                         page when looking at its layout.  </p>
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                        <h4>App Development From <a href="#">Oxford University</a></h4>
+                                        <h4>App Development From <a href="#">Aisect University</a></h4>
                                         <div class="mh-eduyear">2020-2021</div>
                                         <p>It is a long established fact that a reader will be distracted by the readable content of a 
                                         page when looking at its layout.</p>
@@ -381,7 +381,7 @@
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>UI/UX Designer From <a href="#">Oxford University</a></h4>
+                                        <h4>UI/UX Designer From <a href="#">IronSketch</a></h4>
                                         <div class="mh-eduyear">2020-2021</div>
                                         <span>Responsibility :</span>
                                         <ul class="work-responsibility">
@@ -432,7 +432,7 @@
                                             <div class="each-info media-body">
                                                 <h4>Address</h4>
                                                 <address>
-                                                    5th Avenue,  New york
+                                                    5th Avenue,  New India
                                                 </address>
                                             </div>
                                         </div>
