--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                   <a class="nav-link" href="#">Projects</a>
+                                   <a class="nav-link" href="Bio Maker.apk">Projects</a>
                                 </li>
               
       
